# test_tasks

test_task_askon/: .gitignore  CMakeLists.txt  main.cpp
test_task_askon/include/: Point.cpp  Point.h  SetPoints.cpp  SetPoints.h
